@@ -16,8 +16,9 @@
   "spell.dacxirons.summonkamath.guide": "Summon the eldritch champion, Kamath himself",
   "spell.dacxirons.eldritch_slash": "Eldritch Slash",
   "spell.dacxirons.eldritch_slash.guide": "Unleash an uninterruptible slash infused by Kamath himself",
-  "ui.dacxirons.summon_hp": "%d summoned kamath hp",
-  "ui.dacxirons.kamath.summon_duration": "%ds summoned kamath duration",
+  "ui.dacxirons.summon_hp": "%d Summon hp",
+  "ui.dacxirons.summon_dmg": "%d Summon damage",
+  "ui.dacxirons.kamath.summon_duration": "%ds Summon duration",
   "ui.dacxirons.sunleia.beam": "%d Damage",
   "tooltip.dacxirons.enhance_spell_level": "\u00a7e+1 level to %s",
   "item.dacxirons.divine_manuscript_spell_book": "Divine Manuscript",
