@@ -9,3 +9,5 @@ BloodyMancer rework:
 Blood Bending Full se ability:  while bleeding, +20% blood spell power per bleeding level
 Gave bloodymancer +15% blood magic resistance/piece to match blazymancer
 Sanguine Scepter also inflicts bleeding when held in offhand
+Summon Weakness spel is now obtainable
+Summoned Weakness Health & damage now scales with spell power
